--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Amiya sahu ,
+Web Developer and Designer ">
+    <meta name="author" content="Amiya Sahu">
+    <link rel="shortcut icon" href="assets/ico/a4.ico">
+
+    <title>Amiya Sahu | Web Developer and Designer </title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="assets/css/main.css" rel="stylesheet">
+    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+
+	<div class="nav">
+		<a href="index.html#hero" class="scroll">section one</a>
+		<a href="index.html#networks" class="scroll">section three</a>
+	</div>
+	<section id="hero">
+			<div class="hero-block">
+				<img class="img-circle" src="assets/img/amiya.jpg" width="200" height="200" class="mb-7 hero-image">
+				<p> Hello, I'm Amiya .<br/>
+				Web Developer and Designer .<br/>
+				<a href="http://www.php.net" target="_blank"> PHP </a>/ <a href="http://wordpress.org" target="_blank"> WordPress </a> / <a href="http://laravel.com" target="_blank">Laravel </a>/ <a href="http://www.question2answer.org" target="_blank">Question2Answer Expert </a>.<br/>
+				Hands on Experience with Javascript / <a href="http://jquery.com/" target="_blank">JQuery</a> / HTML / CSS .<br/>
+				<!-- A Great follower of Twitter Bootstrap and a crazy Fan of Laravel <br/> -->
+				I design awesome feature rich websites and some <a href="http://interviewcrackers.com" target="_blank">blogging </a> stuff when I am free .
+				</p>
+			</div>
+		<a href="#networks" class="scroll hidden-xs"><span class="down-arrow"></span></a>
+	</section>
+	
+	<section id="networks">
+		<div class="container">
+			<h2>Connect with me in social media</h2>
+			<p>
+				<a href="https://www.facebook.com/amiyaece" target="_blank"><i class="facebook fa fa-facebook"></i></a>
+				<a href="https://twitter.com/amiya_sahu" target="_blank" ><i class="twitter fa fa-twitter"></i></a>
+				<a href="https://www.google.com/+AmiyaSahu-WebDeveloper" target="_blank"><i class="google-plus fa fa-google-plus"></i></a>
+				<a href="mailto:amiya053@gmail.com"><i class="mail fa fa-envelope"></i></a>
+			</p>
+
+		</div>
+	
+	</section>
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/jribbble.js"></script>
+    <script src="assets/js/site-ck.js"></script>
+
+  </body>
+</html>
