--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Web Developer and Designer ">
 			<div class="hero-block">
 				<img class="img-circle" src="assets/img/amiya.jpg" width="200" height="200" class="mb-7 hero-image">
 				<p> Hello, I'm Amiya .<br/>
-				Web Developer and Designer .<br/>
+				Web Developer based in India .<br/>
 				<a href="http://www.php.net" target="_blank"> PHP </a>/ <a href="http://wordpress.org" target="_blank"> WordPress </a> / <a href="http://laravel.com" target="_blank">Laravel </a>/ <a href="http://www.question2answer.org" target="_blank">Question2Answer Expert </a>.<br/>
 				Hands on Experience with Javascript / <a href="http://jquery.com/" target="_blank">JQuery</a> / HTML / CSS .<br/>
 				<!-- A Great follower of Twitter Bootstrap and a crazy Fan of Laravel <br/> -->
